fix: clipping with VE toolbar

--- a/skinStyles/extensions/VisualEditor/ext.visualEditor.less
+++ b/skinStyles/extensions/VisualEditor/ext.visualEditor.less
@@ -20,6 +20,10 @@
 		opacity: 1;
 		pointer-events: auto;
 	}
+	
+	#content {
+		overflow: visible;
+	}
 
 	.mw-footer {
 		z-index: 2; // Fix collision with VE elements
